--- a/styles/general-styles.css
+++ b/styles/general-styles.css
@@ -1,4 +1,19 @@
 *{
   margin: 0;
   padding: 0;
+  font-family: helvetica;
 }
+
+ul{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+  color: #444;
+  transition: 0.4s;
+}
+a:hover{
+  color: #37a1f7;
+}
+
